cujae logo added to assets

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -25,5 +25,6 @@
     "no": "No",
     "yes": "Yes",
     "selectPath": "Choose a folder",
-    "selectedPath": "Selected path"
+    "selectedPath": "Selected path",
+    "about": "About"
 }
