--- a/lib/l10n/app_es.arb
+++ b/lib/l10n/app_es.arb
@@ -25,5 +25,6 @@
     "no": "No",
     "yes": "Sí",
     "selectPath": "Seleccione una carpeta",
-    "selectedPath": "Carpeta seleccionada"
+    "selectedPath": "Carpeta seleccionada",
+    "about": "Acerca de..."
 }
