--- a/lib/l10n/app_es.arb
+++ b/lib/l10n/app_es.arb
@@ -20,6 +20,7 @@
     "dsFileCopying": "Copiando archivos",
     "done": "Listo",
     "errorDeploying": "Error al copiar los archivos.\nPuede ser que por nuevas políticas de Android no se pueda utilizar este directorio. Pruebe seleccionando otro.",
+    "systemErrorResponse": "Respuesta del sistema:",
     "warning": "Atención",
     "deployConfirmationText": "¿Seguro que desea desplegar la fuente de datos? El proceso no se puede interrumpir por razones de seguridad y consistencia.\n\nTenga en cuenta que si ya existía una fuente de datos en esta carpeta se sobreescribirán los archivos con el mismo nombre.",
     "no": "No",
